--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
-    "cypress": "^10.8.0"
+    "@shelex/cypress-allure-plugin": "^2.40.1",
+    "cypress": "^10.8.0",
+    "cypress-mochawesome-reporter": "^3.7.0"
   },
   "dependencies": {
     "@cypress/xpath": "^2.0.3"
